<resources>
    <string name="app_name">Student Course Booking App</string>
    <string name="welcome">Welcome</string>
    <string name="select_your_user">Select your user:</string>
    <string name="admin">Admin</string>
    <string name="teacher">Teacher</string>
    <string name="Student">Student</string>
    <string name="SelectTypeOfUser">Type of User</string>
    <string name="SignUp">Sign Up</string>
    <string name="LogIn">LogIn</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="WelcomeMessage">Welcome</string>
    <string name="adminUser">user</string>
    <string name="role">Administrator</string>
    <string name="adminAddCourse">Add a Course</string>
    <string name="adminAddUser">Add a User</string>
    <string name="adminDelCourse">Delete a Course</string>
    <string name="adminDelUser">Delete a User</string>
    <string name="courseCodeValue">Enter Course Code</string>
    <string name="courseDesc">Enter Course Description</string>
    <string name="courseD">Description</string>
    <string name="courseID">Course Code</string>
    <string name="addCourse">Add</string>
    <string name="addUsername">Enter new Username</string>
    <string name="addPass">Enter new Password</string>
    <string name="Instructor">Instructor</string>
    <string name="editCourse">Edit Course</string>
    <string name="delete">Delete</string>
    <string name="viewCourse">View Course</string>
    <string name="EnterUser">Enter Username</string>
    <string name="CourseName">Enter Course Name</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="assign">Assign to Self</string>
    <string name="ViewCourses">View Courses to Teach</string>
</resources>
